tdf#108210: Allow to ignore a lock file if there's no filesystem lock

Two cases are handled: when a file is being opened, and when it was
opened read-only already, and one tries to reopen it in edit mode.
The option to ignore locking and open the file anyway is only offered
when there is no filesystem lock present on the file.

Change-Id: I377d3cae4c949ae64d449634acea8fb3f68a5700